css-fixes : z-index changes

--- a/src/app/enrollment/enrollment.component.scss
+++ b/src/app/enrollment/enrollment.component.scss
@@ -18,7 +18,7 @@
       background-color: $color-white;
       padding: 1.6rem 1.3rem 1.6rem 3.5rem;
       position: sticky;
-      z-index: 1;
+      z-index: 100;
       top: 0;
       justify-content: space-between;
 
