--- a/src/app/shared/components/custom-upload-documents/custom-upload-documents.component.scss
+++ b/src/app/shared/components/custom-upload-documents/custom-upload-documents.component.scss
@@ -2,7 +2,7 @@
 
 .backdrop {
   background: rgba(0, 0, 0, 0.5);
-  z-index: 9;
+  z-index: 999;
   position: fixed;
   top: 0;
   left: 0;
@@ -16,7 +16,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  z-index: 9;
+  z-index: 999;
   transform: translate(-50%, -50%);
 
   .header {
